# resourcer

./: .gitignore  CODE_OF_CONDUCT.md  Cargo.toml  LICENSE  README.md  package.json
.github/workflows/: ci.yml
.taskmaster/: config.json  state.json
.taskmaster/docs/: prd.txt
.taskmaster/reports/: task-complexity-report.json
.taskmaster/tasks/: tasks.json
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: cli_ops.rs  download_manager.rs  fetch.rs  file_io.rs  lib.rs  local_analysis.rs  output.rs  path_reconstruct.rs  sm_parse.rs  sourcemap.rs  storage.rs  url_utils.rs  webpack.rs
crates/core/tests/: fetch_tests.rs  file_io_tests.rs  local_analysis_tests.rs  output_tests.rs  path_reconstruct_tests.rs  sm_parse_tests.rs  sourcemap_parse_tests.rs  sourcemap_tests.rs  storage_tests.rs  webpack_tests.rs
crates/detectors/: Cargo.toml
crates/detectors/src/: lib.rs
