[package]
name = "resourcer_cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "resourcer_cli"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
resourcer_core = { path = "../core" }
url = { version = "2", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
env_logger = "0.10"
log = "0.4"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "sync"] }
regex = "1"
thiserror = "2"
