[package]
name = "core"
version = "0.0.1"
edition = "2021"

[dependencies]
reqwest = { version = "0.12", features = ["json", "gzip", "brotli", "deflate", "cookies", "rustls-tls"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
url = "2"
thiserror = "1"

[dev-dependencies]
httpmock = "0.7"
