[package]
name = "sourcedumper_core"
version = "0.0.1"
edition = "2021"

[dependencies]
reqwest = { version = "0.12", features = ["json", "gzip", "brotli", "deflate", "cookies", "rustls-tls"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "fs"] }
url = "2"
thiserror = "1"
chrono = "0.4"
async-trait = "0.1"

[dev-dependencies]
httpmock = "0.7"
tempfile = "3"
