[package]
name = "sourcedumper_core"
version = "0.0.1"
edition = "2021"

[dependencies]
reqwest = { version = "0.12", features = ["json", "gzip", "brotli", "deflate", "cookies", "rustls-tls"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "fs"] }
url = "2"
thiserror = "2"
chrono = "0.4"
async-trait = "0.1"
regex = "1"
once_cell = "1"
futures = "0.3"
sourcemap = "9"
swc_ecma_parser = "20.0.0"
swc_common = "14.0.0"
swc_ecma_ast = "14.0.0"

[dev-dependencies]
httpmock = "0.7"
tempfile = "3"
serde_json = "1"
